template-infrastructure-2023/gcp/network-custom.tf
#################################
# Create CUSTOM mode VPC network - managementnet
#################################
resource "google_compute_network" "managementnet" {
  name = "managementnet"
  project = var.project_id
  auto_create_subnetworks = "false"

}

resource "google_compute_subnetwork" "managementsubnet-us" {
  name          = "managementsubnet-us"
  ip_cidr_range = "10.240.0.0/20"
  region        = "us-west4"
  network       = google_compute_network.managementnet.id
}

resource "google_compute_firewall" "managementnet-allow-icmp-ssh-rdp" {
  name = "managementnet-allow-icmp-ssh-rdp"
  project = var.project_id
  network = google_compute_network.managementnet.self_link
  allow {
    protocol = "tcp"
    ports    = ["22", "3389"]
  }
  allow {
    protocol = "icmp"
  }
  source_ranges = ["0.0.0.0/0"]
}

# Create the managementnet-us-vm instance
module "managementnet-us-vm" {
  source           = "./instance"
  instance_type    = "e2-micro"
  instance_image   = "debian-cloud/debian-11"
  instance_name    = "managementnet-us-vm"
  instance_zone    = "us-west4-c"
  instance_network = google_compute_network.managementnet.self_link
  instance_subnetwork = google_compute_subnetwork.managementsubnet-us.self_link
}

#################################
# Create custom mode VPC network - privatenet
#################################
resource "google_compute_network" "privatenet" {
  name = "privatenet"
  project = var.project_id
  auto_create_subnetworks = "false"
}

resource "google_compute_subnetwork" "privatenet-subnet-us" {
  name          = "privatenet-subnet-us"
  ip_cidr_range = "172.16.0.0/24"
  region        = "us-west4"
  network       = google_compute_network.privatenet.id
}

resource "google_compute_subnetwork" "privatenet-subnet-eu" {
  name          = "privatenet-subnet-eu"
  ip_cidr_range = "172.20.0.0/20"
  region        = "europe-west1"
  network       = google_compute_network.privatenet.id
}

resource "google_compute_firewall" "privatenet-allow-icmp-ssh-rdp" {
  name = "privatenet-allow-icmp-ssh-rdp"
  project = var.project_id
  network = google_compute_network.privatenet.self_link
  allow {
    protocol = "tcp"
    ports    = ["22", "3389"]
  }
  allow {
    protocol = "icmp"
  }
  source_ranges = ["0.0.0.0/0"]
}

module "privatenet-us-vm" {
  source           = "./instance"
  instance_type    = "e2-micro"
  instance_image   = "debian-cloud/debian-11"
  instance_name    = "privatenet-us-vm"
  instance_zone    = "us-west4-c"
  instance_network = google_compute_network.privatenet.self_link
  instance_subnetwork = google_compute_subnetwork.privatenet-subnet-us.self_link
}
module "privatenet-eu-vm" {
  source           = "./instance"
  instance_type    = "e2-micro"
  instance_image   = "debian-cloud/debian-11"
  instance_name    = "privatenet-eu-vm"
  instance_zone    = "europe-west1-c"
  instance_network = google_compute_network.privatenet.self_link
  instance_subnetwork = google_compute_subnetwork.privatenet-subnet-eu.self_link
}
